@@ -1,6 +1,7 @@
 2011-08-05  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Changed the request handlers to use edismax
+	* Changed the schema.xml files to use relative paths in xIncludes (supported since Apache Solr 3.1)
 
 2011-08-03  Ingo Renner  <ingo.renner@dkd.de>
 
